# cpp-playground

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt
compile_time_pi_estimation/: CMakeLists.txt  README.md
compile_time_pi_estimation/include/: linear_generator.hpp
compile_time_pi_estimation/src/: calculate_pi.cpp
pimpl idiom/: CMakeLists.txt  README.md
pimpl idiom/include/: interface.hpp
pimpl idiom/shared/: animal.cpp
pimpl idiom/src/: main.cpp
recursive_templates/: CMakeLists.txt  README.md
recursive_templates/include/: recursive_templates.tpp
recursive_templates/src/: main.cpp
tests/: CMakeLists.txt  README.md
tests/include/: somelib.hpp
tests/src/: math_tests.cpp
variadic_templates/: CMakeLists.txt  README.md
variadic_templates/include/: variadic_templates.tpp
variadic_templates/src/: main.cpp
